--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,10 @@
     "start": "npm run serve"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-common-types": "^0.2.35",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "core-js": "^3.6.5",
     "ionicons": "^5.2.3",
     "node-sass": "^5.0.0",
