--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,11 @@
     "vue-navigation-bar": "^4.1.0"
   },
   "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "nodemon": "^2.0.6"
   }
 }
