:construction: add mongoose,ESM,docker

--- a/server/.env-example
+++ b/server/.env-example
@@ -3,4 +3,4 @@ AUTHORIZED_LOGIN=
 AUTHORIZED_PASSWD=
 JWT_KEY = votresecret
 MONGO_ATLAS_URL=mongodb+srv://venom-admin:<pswd>@cluster0.yijbv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-MONGO_URL=
+MONGO_URL= mongodb://venom:venom@localhost:27017/venom
